add eureka server.

--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,11 @@
     </modules>
 
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.10.RELEASE</version>
+    </parent>
+
+
 </project>
