--- a/organizationsvr/pom.xml
+++ b/organizationsvr/pom.xml
@@ -4,18 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.thoughtmechanix</groupId>
-    <artifactId>eurekasvr</artifactId>
+    <artifactId>organizationsvr</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Eureka Server</name>
-    <description>Eureka Server demo project</description>
-
-    <parent>
-        <groupId>com.thoughtmechanix</groupId>
-        <artifactId>tmx-pom-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+    <name>organizationsvr</name>
+    <description>Demo project for Spring Boot</description>
 
     <!--<parent>-->
         <!--<groupId>org.springframework.boot</groupId>-->
@@ -23,17 +17,12 @@
         <!--<version>1.5.10.RELEASE</version>-->
         <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     <!--</parent>-->
-    <!--<dependencyManagement>-->
-        <!--<dependencies>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-dependencies</artifactId>-->
-                <!--<version>Camden.SR6</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
-            <!--</dependency>-->
-        <!--</dependencies>-->
-    <!--</dependencyManagement>-->
+
+    <parent>
+        <groupId>com.thoughtmechanix</groupId>
+        <artifactId>tmx-pom-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,22 +32,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix-eureka-server</artifactId>
-            <version>1.4.3.RELEASE</version>
         </dependency>
     </dependencies>
 
