--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.thoughtmechanix</groupId>
-    <artifactId>tmx-pom.parent</artifactId>
+    <artifactId>tmx-pom-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>eurekasvr</module>
+        <module>organizationsvr</module>
     </modules>
 
 
