--- a/eurekasvr/src/main/resources/application.yml
+++ b/eurekasvr/src/main/resources/application.yml
@@ -4,5 +4,9 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 5
+  instance:
+    hostname: localhost
